# easy_lua_esp32

./: CLAUDE.md  FILE_TRANSFER_USAGE.md  LIBRARY_CREATION_GUIDE.md  LUA_SYS_MIGRATION.md  USER_CALLBACKS_GUIDE.md  platformio.ini
lib/EasyLuaESP32/: README.md  library.json  library.properties
lib/EasyLuaESP32/src/: EasyLuaESP32.cpp  EasyLuaESP32.h  easy_lua_ble.cpp  easy_lua_ble.h
lib/lua_sys/: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  keywords.txt  library.json  library.properties  platformio.ini
lib/lua_sys/data/: sys.lua
lib/lua_sys/examples/: example_advanced.lua  example_basic.lua
lib/lua_sys/examples/BasicExample/: BasicExample.ino
lib/lua_sys/include/: luat_base.h  luat_msgbus.h  luat_timer.h
lib/lua_sys/scripts/: copy_lua.py
lib/lua_sys/src/: lua_sys.cpp  lua_sys.h  luat_lib_rtos.c  luat_msgbus_freertos.c  luat_timer_freertos.c
src/: main.cpp
src/comms/: ble_comm.cpp
src/core/: event_msg.cpp  event_msg.h  file_transfer.cpp  lua_engine.cpp  lua_engine.h
src/lua_modules/lua_arduino/: lua_arduino.cpp
src/modules/: arduino_module.cpp  arduino_module.h  file_transfer.cpp  file_transfer.h
src/system_init/: system_init.cpp  system_init.h
src/utils/: debug.h
web/: README.md  index.html
web/eventstudio/: event_msg.js  index.html
web/luaIDE/: IDE_STRUCTURE.md  IMPLEMENTATION_PLAN.md  INDEXEDDB_MIGRATION_COMPLETE.md  INDEXEDDB_MIGRATION_PLAN.md  REQUIREMENTS.md  STORAGE_ARCHITECTURE.md  STORAGE_COMPARISON.md  index.html  styles.css
web/luaIDE/js/: app.js  event_msg.js  (+10 more)
web/old_lua_ide/: index.html  script.js  styles.css
(+19 files in other folders)
